Closed Bug 378860 Opened 17 years ago Closed 17 years ago

If setAttribute sets an invalid value, the attribute default should be used

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jwatt, Assigned: longsonr)

References

Details

Attachments

(1 file, 1 obsolete file)

If setAttribute sets an invalid value, the attribute's default value should be used. In some cases we just continue to use the last valid attribute value. This is follow up to bug 344888.
Attached patch patch (obsolete) — Splinter Review
Assignee: general → longsonr
Status: NEW → ASSIGNED
Attachment #285088 - Flags: review?(tor)
Depends on: 399975
Attachment #285088 - Flags: review?(tor) → review+
Attachment #285088 - Flags: superreview?(roc)
How about giving each *AttributesInfo class a Reset(PRUint32 i) method that does the ... .Init (...); dance? Then that code could be shared between UnsetAttr and ParseAttribute.
Attachment #285088 - Flags: superreview?(roc)
Attachment #285088 - Attachment is obsolete: true
Attachment #285857 - Flags: superreview?(roc)
Attachment #285857 - Flags: superreview?(roc) → superreview+
Comment on attachment 285857 [details] [diff] [review]
address superreview comments

We already do this for some types so this just makes us consistent. Improves spec compliance for SVG. I checked that the croczilla xul pages seem to display correctly.
Attachment #285857 - Flags: approval1.9?
Attachment #285857 - Flags: approval1.9? → approval1.9+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: