Bug 378860 - If setAttribute sets an invalid value, the attribute default should be used. r=tor,sr=roc,a1.9=tor