content/svg/content/src/nsSVGElement.cpp
@@ -110,42 +110,37 @@ nsSVGElement::Init()
 
   PRUint32 i;
   for (i = 0; i < lengthInfo.mLengthCount; i++) {
-    lengthInfo.mLengths[i].Init(lengthInfo.mLengthInfo[i].mCtxType,
-                                i,
-                                lengthInfo.mLengthInfo[i].mDefaultValue,
-                                lengthInfo.mLengthInfo[i].mDefaultUnitType);
+    lengthInfo.Reset(i);
   }
 
   NumberAttributesInfo numberInfo = GetNumberInfo();
 
   for (i = 0; i < numberInfo.mNumberCount; i++) {
-    numberInfo.mNumbers[i].Init(i, numberInfo.mNumberInfo[i].mDefaultValue);
+    numberInfo.Reset(i);
   }
 
   IntegerAttributesInfo integerInfo = GetIntegerInfo();
 
   for (i = 0; i < integerInfo.mIntegerCount; i++) {
-    integerInfo.mIntegers[i].Init(i, integerInfo.mIntegerInfo[i].mDefaultValue);
+    integerInfo.Reset(i);
   }
 
   AngleAttributesInfo angleInfo = GetAngleInfo();
 
   for (i = 0; i < angleInfo.mAngleCount; i++) {
-    angleInfo.mAngles[i].Init(i,
-                              angleInfo.mAngleInfo[i].mDefaultValue,
-                              angleInfo.mAngleInfo[i].mDefaultUnitType);
+    angleInfo.Reset(i);
   }
 
   BooleanAttributesInfo booleanInfo = GetBooleanInfo();
 
   for (i = 0; i < booleanInfo.mBooleanCount; i++) {
-    booleanInfo.mBooleans[i].Init(i, booleanInfo.mBooleanInfo[i].mDefaultValue);
+    booleanInfo.Reset(i);
   }
 
   EnumAttributesInfo enumInfo = GetEnumInfo();
 
   for (i = 0; i < enumInfo.mEnumCount; i++) {
-    enumInfo.mEnums[i].Init(i, enumInfo.mEnumInfo[i].mDefaultValue);
+    enumInfo.Reset(i);
   }
 
   return NS_OK;
@@ -247,6 +242,7 @@ nsSVGElement::ParseAttribute(PRInt32 aNamespaceID,
       NS_ENSURE_SUCCESS(rv, PR_FALSE);
 
       svg_value->RemoveObserver(this);
+      ResetOldStyleBaseType(svg_value);
       proxy->SetValueString(aValue);
       proxy->AddObserver(this);
       aResult.SetTo(proxy);
@@ -269,6 +265,9 @@ nsSVGElement::ParseAttribute(PRInt32 aNamespaceID,
     for (i = 0; i < lengthInfo.mLengthCount && !foundMatch; i++) {
       if (aAttribute == *lengthInfo.mLengthInfo[i].mName) {
         rv = lengthInfo.mLengths[i].SetBaseValueString(aValue, this, PR_FALSE);
+        if (NS_FAILED(rv)) {
+          lengthInfo.Reset(i);
+        }
         foundMatch = PR_TRUE;
       }
     }
@@ -278,6 +277,9 @@ nsSVGElement::ParseAttribute(PRInt32 aNamespaceID,
     for (i = 0; i < numberInfo.mNumberCount && !foundMatch; i++) {
       if (aAttribute == *numberInfo.mNumberInfo[i].mName) {
         rv = numberInfo.mNumbers[i].SetBaseValueString(aValue, this, PR_FALSE);
+        if (NS_FAILED(rv)) {
+          numberInfo.Reset(i);
+        }
         foundMatch = PR_TRUE;
       }
     }
@@ -287,6 +289,9 @@ nsSVGElement::ParseAttribute(PRInt32 aNamespaceID,
     for (i = 0; i < integerInfo.mIntegerCount && !foundMatch; i++) {
       if (aAttribute == *integerInfo.mIntegerInfo[i].mName) {
         rv = integerInfo.mIntegers[i].SetBaseValueString(aValue, this, PR_FALSE);
+        if (NS_FAILED(rv)) {
+          integerInfo.Reset(i);
+        }
         foundMatch = PR_TRUE;
       }
     }
@@ -296,6 +301,9 @@ nsSVGElement::ParseAttribute(PRInt32 aNamespaceID,
     for (i = 0; i < angleInfo.mAngleCount && !foundMatch; i++) {
       if (aAttribute == *angleInfo.mAngleInfo[i].mName) {
         rv = angleInfo.mAngles[i].SetBaseValueString(aValue, this, PR_FALSE);
+        if (NS_FAILED(rv)) {
+          angleInfo.Reset(i);
+        }
         foundMatch = PR_TRUE;
       }
     }
@@ -305,6 +313,9 @@ nsSVGElement::ParseAttribute(PRInt32 aNamespaceID,
     for (i = 0; i < booleanInfo.mBooleanCount && !foundMatch; i++) {
       if (aAttribute == *booleanInfo.mBooleanInfo[i].mName) {
         rv = booleanInfo.mBooleans[i].SetBaseValueString(aValue, this, PR_FALSE);
+        if (NS_FAILED(rv)) {
+          booleanInfo.Reset(i);
+        }
         foundMatch = PR_TRUE;
       }
     }
@@ -314,6 +325,9 @@ nsSVGElement::ParseAttribute(PRInt32 aNamespaceID,
     for (i = 0; i < enumInfo.mEnumCount && !foundMatch; i++) {
       if (aAttribute == *enumInfo.mEnumInfo[i].mName) {
         rv = enumInfo.mEnums[i].SetBaseValueString(aValue, this, PR_FALSE);
+        if (NS_FAILED(rv)) {
+          enumInfo.Reset(i);
+        }
         foundMatch = PR_TRUE;
       }
     }
@@ -355,10 +369,7 @@ nsSVGElement::UnsetAttr(PRInt32 aNamespaceID, nsIAtom* aName,
       PRUint32 i;
       for (i = 0; i < lenInfo.mLengthCount; i++) {
         if (aName == *lenInfo.mLengthInfo[i].mName) {
-          lenInfo.mLengths[i].Init(lenInfo.mLengthInfo[i].mCtxType,
-                                   i,
-                                   lenInfo.mLengthInfo[i].mDefaultValue,
-                                   lenInfo.mLengthInfo[i].mDefaultUnitType);
+          lenInfo.Reset(i);
           DidChangeLength(i, PR_FALSE);
         }
       }
@@ -367,7 +378,7 @@ nsSVGElement::UnsetAttr(PRInt32 aNamespaceID, nsIAtom* aName,
 
       for (i = 0; i < numInfo.mNumberCount; i++) {
         if (aName == *numInfo.mNumberInfo[i].mName) {
-          numInfo.mNumbers[i].Init(i, numInfo.mNumberInfo[i].mDefaultValue);
+          numInfo.Reset(i);
           DidChangeNumber(i, PR_FALSE);
         }
       }
@@ -377,7 +388,7 @@ nsSVGElement::UnsetAttr(PRInt32 aNamespaceID, nsIAtom* aName,
 
       for (i = 0; i < intInfo.mIntegerCount; i++) {
         if (aName == *intInfo.mIntegerInfo[i].mName) {
-          intInfo.mIntegers[i].Init(i, intInfo.mIntegerInfo[i].mDefaultValue);
+          intInfo.Reset(i);
           DidChangeInteger(i, PR_FALSE);
         }
       }
@@ -387,9 +398,7 @@ nsSVGElement::UnsetAttr(PRInt32 aNamespaceID, nsIAtom* aName,
 
       for (i = 0; i < angleInfo.mAngleCount; i++) {
         if (aName == *angleInfo.mAngleInfo[i].mName) {
-          angleInfo.mAngles[i].Init(i, 
-                                    angleInfo.mAngleInfo[i].mDefaultValue,
-                                    angleInfo.mAngleInfo[i].mDefaultUnitType);
+          angleInfo.Reset(i);
           DidChangeAngle(i, PR_FALSE);
         }
       }
@@ -399,7 +408,7 @@ nsSVGElement::UnsetAttr(PRInt32 aNamespaceID, nsIAtom* aName,
 
       for (i = 0; i < boolInfo.mBooleanCount; i++) {
         if (aName == *boolInfo.mBooleanInfo[i].mName) {
-          boolInfo.mBooleans[i].Init(i, boolInfo.mBooleanInfo[i].mDefaultValue);
+          boolInfo.Reset(i);
           DidChangeBoolean(i, PR_FALSE);
         }
       }
@@ -409,7 +418,7 @@ nsSVGElement::UnsetAttr(PRInt32 aNamespaceID, nsIAtom* aName,
 
       for (i = 0; i < enumInfo.mEnumCount; i++) {
         if (aName == *enumInfo.mEnumInfo[i].mName) {
-          enumInfo.mEnums[i].Init(i, enumInfo.mEnumInfo[i].mDefaultValue);
+          enumInfo.Reset(i);
           DidChangeEnum(i, PR_FALSE);
         }
       }
@@ -418,50 +427,56 @@ nsSVGElement::UnsetAttr(PRInt32 aNamespaceID, nsIAtom* aName,
       nsCOMPtr<nsISVGValue> svg_value = GetMappedAttribute(aNamespaceID, aName);
 
       if (svg_value) {
-        nsCOMPtr<nsIDOMSVGAnimatedRect> r = do_QueryInterface(svg_value);
-        if (r) {
-          nsCOMPtr<nsIDOMSVGRect> rect;
-          r->GetBaseVal(getter_AddRefs(rect));
-          static_cast<nsSVGRect*>(rect.get())->Clear();
-        }
-        nsCOMPtr<nsIDOMSVGAnimatedPreserveAspectRatio> ar = do_QueryInterface(svg_value);
-        if (ar) {
-          nsCOMPtr<nsIDOMSVGPreserveAspectRatio> par;
-          ar->GetBaseVal(getter_AddRefs(par));
-          par->SetAlign(nsIDOMSVGPreserveAspectRatio::SVG_PRESERVEASPECTRATIO_XMIDYMID);
-          par->SetMeetOrSlice(nsIDOMSVGPreserveAspectRatio::SVG_MEETORSLICE_MEET);
-        }
-        nsCOMPtr<nsIDOMSVGAnimatedString> s = do_QueryInterface(svg_value);
-        if (s) {
-          s->Clear();
-        }
-        nsCOMPtr<nsIDOMSVGPointList> pl = do_QueryInterface(svg_value);
-        if (pl) {
-          pl->Clear();
-        }
-        nsCOMPtr<nsIDOMSVGAnimatedLengthList> ll = do_QueryInterface(svg_value);
-        if (ll) {
-          nsCOMPtr<nsIDOMSVGLengthList> lengthlist;
-          ll->GetBaseVal(getter_AddRefs(lengthlist));
-          lengthlist->Clear();
-        }
-        nsCOMPtr<nsIDOMSVGAnimatedNumberList> nl = do_QueryInterface(svg_value);
-        if (nl) {
-          nsCOMPtr<nsIDOMSVGNumberList> numberlist;
-          nl->GetBaseVal(getter_AddRefs(numberlist));
-          numberlist->Clear();
-        }
-        nsCOMPtr<nsIDOMSVGAnimatedTransformList> tl = do_QueryInterface(svg_value);
-        if (tl) {
-          nsCOMPtr<nsIDOMSVGTransformList> transform;
-          tl->GetBaseVal(getter_AddRefs(transform));
-          transform->Clear();
-        }
+        ResetOldStyleBaseType(svg_value);
       }
     }
   }
 
   return nsSVGElementBase::UnsetAttr(aNamespaceID, aName, aNotify);
+}
+
+void
+nsSVGElement::ResetOldStyleBaseType(nsISVGValue *svg_value)
+{
+  nsCOMPtr<nsIDOMSVGAnimatedRect> r = do_QueryInterface(svg_value);
+  if (r) {
+    nsCOMPtr<nsIDOMSVGRect> rect;
+    r->GetBaseVal(getter_AddRefs(rect));
+    static_cast<nsSVGRect*>(rect.get())->Clear();
+  }
+  nsCOMPtr<nsIDOMSVGAnimatedPreserveAspectRatio> ar = do_QueryInterface(svg_value);
+  if (ar) {
+    nsCOMPtr<nsIDOMSVGPreserveAspectRatio> par;
+    ar->GetBaseVal(getter_AddRefs(par));
+    par->SetAlign(nsIDOMSVGPreserveAspectRatio::SVG_PRESERVEASPECTRATIO_XMIDYMID);
+    par->SetMeetOrSlice(nsIDOMSVGPreserveAspectRatio::SVG_MEETORSLICE_MEET);
+  }
+  nsCOMPtr<nsIDOMSVGAnimatedString> s = do_QueryInterface(svg_value);
+  if (s) {
+    s->Clear();
+  }
+  nsCOMPtr<nsIDOMSVGPointList> pl = do_QueryInterface(svg_value);
+  if (pl) {
+    pl->Clear();
+  }
+  nsCOMPtr<nsIDOMSVGAnimatedLengthList> ll = do_QueryInterface(svg_value);
+  if (ll) {
+    nsCOMPtr<nsIDOMSVGLengthList> lengthlist;
+    ll->GetBaseVal(getter_AddRefs(lengthlist));
+    lengthlist->Clear();
+  }
+  nsCOMPtr<nsIDOMSVGAnimatedNumberList> nl = do_QueryInterface(svg_value);
+  if (nl) {
+    nsCOMPtr<nsIDOMSVGNumberList> numberlist;
+    nl->GetBaseVal(getter_AddRefs(numberlist));
+    numberlist->Clear();
+  }
+  nsCOMPtr<nsIDOMSVGAnimatedTransformList> tl = do_QueryInterface(svg_value);
+  if (tl) {
+    nsCOMPtr<nsIDOMSVGTransformList> transform;
+    tl->GetBaseVal(getter_AddRefs(transform));
+    transform->Clear();
+  }
 }
 
 PRBool
@@ -938,6 +953,14 @@ nsSVGElement::GetLengthInfo()
   return LengthAttributesInfo(nsnull, nsnull, 0);
 }
 
+void nsSVGElement::LengthAttributesInfo::Reset(PRUint8 aAttrEnum)
+{
+  mLengths[aAttrEnum].Init(mLengthInfo[aAttrEnum].mCtxType,
+                           aAttrEnum,
+                           mLengthInfo[aAttrEnum].mDefaultValue,
+                           mLengthInfo[aAttrEnum].mDefaultUnitType);
+}
+
 void
 nsSVGElement::DidChangeLength(PRUint8 aAttrEnum, PRBool aDoSetAttr)
 {
@@ -998,6 +1021,12 @@ nsSVGElement::GetNumberInfo()
   return NumberAttributesInfo(nsnull, nsnull, 0);
 }
 
+void nsSVGElement::NumberAttributesInfo::Reset(PRUint8 aAttrEnum)
+{
+  mNumbers[aAttrEnum].Init(aAttrEnum,
+                           mNumberInfo[aAttrEnum].mDefaultValue);
+}
+
 void
 nsSVGElement::DidChangeNumber(PRUint8 aAttrEnum, PRBool aDoSetAttr)
 {
@@ -1043,6 +1072,12 @@ nsSVGElement::IntegerAttributesInfo
 nsSVGElement::GetIntegerInfo()
 {
   return IntegerAttributesInfo(nsnull, nsnull, 0);
+}
+
+void nsSVGElement::IntegerAttributesInfo::Reset(PRUint8 aAttrEnum)
+{
+  mIntegers[aAttrEnum].Init(aAttrEnum,
+                            mIntegerInfo[aAttrEnum].mDefaultValue);
 }
 
 void
@@ -1092,6 +1127,13 @@ nsSVGElement::GetAngleInfo()
   return AngleAttributesInfo(nsnull, nsnull, 0);
 }
 
+void nsSVGElement::AngleAttributesInfo::Reset(PRUint8 aAttrEnum)
+{
+  mAngles[aAttrEnum].Init(aAttrEnum, 
+                          mAngleInfo[aAttrEnum].mDefaultValue,
+                          mAngleInfo[aAttrEnum].mDefaultUnitType);
+}
+
 void
 nsSVGElement::DidChangeAngle(PRUint8 aAttrEnum, PRBool aDoSetAttr)
 {
@@ -1118,6 +1160,12 @@ nsSVGElement::GetBooleanInfo()
   return BooleanAttributesInfo(nsnull, nsnull, 0);
 }
 
+void nsSVGElement::BooleanAttributesInfo::Reset(PRUint8 aAttrEnum)
+{
+  mBooleans[aAttrEnum].Init(aAttrEnum,
+                            mBooleanInfo[aAttrEnum].mDefaultValue);
+}
+
 void
 nsSVGElement::DidChangeBoolean(PRUint8 aAttrEnum, PRBool aDoSetAttr)
 {
@@ -1142,6 +1190,12 @@ nsSVGElement::EnumAttributesInfo
 nsSVGElement::GetEnumInfo()
 {
   return EnumAttributesInfo(nsnull, nsnull, 0);
+}
+
+void nsSVGElement::EnumAttributesInfo::Reset(PRUint8 aAttrEnum)
+{
+  mEnums[aAttrEnum].Init(aAttrEnum,
+                         mEnumInfo[aAttrEnum].mDefaultValue);
 }
 
 void
